results/SVCOMP/specgen/log-HttpSession-2024_02_26_00_14_12.txt
import java.util.Collections;
import java.util.Enumeration;
import java.util.HashMap;
import java.util.Map;

public class HttpSession {

  private final Map<String, Object> map = new HashMap<>();

  //@ requires name != null;
  //@ ensures \result == map.get(name);
  public Object getAttribute(String name) {
    return map.get(name);
  }

  //@ ensures \result != null ==> \result.hasMoreElements();
  //@ ensures \result != null ==> \result.nextElement() != null;
  public Enumeration<String> getAttributeNames() {
    return Collections.enumeration(map.keySet());
  }

  //@ requires name != null;
  //@ ensures map.get(name) == value;
  public void setAttribute(String name, Object value) {
    this.map.put(name, value);
  }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 31457280 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid2562.log

import java.util.Collections;
import java.util.Enumeration;
import java.util.HashMap;
import java.util.Map;

public class HttpSession {

  private final Map<String, Object> map = new HashMap<>();

  //@ requires name != null;
  //@ ensures \result == map.get(name);
  public Object getAttribute(String name) {
    return map.get(name);
  }

  //@ ensures \result != null ==> \result.hasMoreElements();
  //@ ensures \result != null ==> \result.nextElement() != null;
  public Enumeration<String> getAttributeNames() {
    return Collections.enumeration(map.keySet());
  }

  //@ requires name != null;
  //@ ensures map.get(name) == value;
  public void setAttribute(String name, Object value) {
    this.map.put(name, value);
  }
}
/home/max/Documents/JMLGPT/tmp/HttpSession.java:11: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == map.get(name);
                         ^
/home/max/Documents/JMLGPT/tmp/HttpSession.java:23: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures map.get(name) == value;
              ^
2 errors

import java.util.Collections;
import java.util.Enumeration;
import java.util.HashMap;
import java.util.Map;

public class HttpSession {

  private final /*@ spec_public @*/ Map<String, Object> map = new HashMap<>();

  //@ requires name != null;
  //@ ensures \result == map.get(name);
  public Object getAttribute(String name) {
    return map.get(name);
  }

  //@ ensures \result != null ==> \result.hasMoreElements();
  //@ ensures \result != null ==> \result.nextElement() != null;
  public Enumeration<String> getAttributeNames() {
    return Collections.enumeration(map.keySet());
  }

  //@ requires name != null;
  //@ ensures map.get(name) == value;
  public void setAttribute(String name, Object value) {
    this.map.put(name, value);
  }
}
